--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,10 +5,10 @@
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/devcontainers/features/azure-cli:1": {},
     "ghcr.io/devcontainers/features/java:1": {
-          "version": "21",
-          "additionalVersions": "17",
-          "installGradle": "true",
-          "installMaven": "true"
-     }
-  }
+      "version": "17.0.11-graal",
+      "installGradle": "true",
+      "installMaven": "true"
+    }
+  },
+  "postCreateCommand": "sdk default java 17.0.11-graal"
 }
