--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,6 @@
       "installGradle": "true",
       "installMaven": "true"
     }
-  }
+  },
+  "postCreateCommand": "sdk default java 17.0.11-graal"
 }
