--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-    "ghcr.io/devcontainers/features/azure-cli:1": {}
-    
+    "ghcr.io/devcontainers/features/azure-cli:1": {},
+    "ghcr.io/devcontainers/features/java:1": {
+      "version": "17.0.11-graal",
+      "installGradle": "true",
+      "installMaven": "true"
+    }
   },
   "postCreateCommand": "sdk default java 17.0.11-graal"
 }
