--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,5 +7,6 @@
       "installGradle": "true",
       "installMaven": "true"
     }
-  }
+  },
+  "postCreateCommand": "echo 'source $HOME/.sdkman/bin/sdkman-init.sh' >> ~/.bashrc && echo 'sdk default java 17.0.11-graal' >> ~/.bashrc && source ~/.bashrc"
 }
