--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,6 @@
       "installMaven": "true",
       "jdkDistro": "graal"
     }
-  }  
+  },
+  "postCreateCommand": "echo 'source $HOME/my_environment\n\nsaveenv() {\n    # Check if var_save is set\n    declare -p | grep -v \"declare -[a-z]*r\" > \"$HOME/my_environment\"\n}\n\nclearenv() {\n    echo \"\" > \"$HOME/my_environment\"\n}' >> $HOME/.bashrc"
 }
