--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,5 @@
       "jdkDistro": "graal"
     }
   },
-  "postCreateCommand": "echo 'source $HOME/my_environment\n\nsaveenv() {\n    # Check if var_save is set\n    declare -p | grep -v \"declare -[a-z]*r\" > \"$HOME/my_environment\"\n}\n\nclearenv() {\n    echo \"\" > \"$HOME/my_environment\"\n}' >> $HOME/.bashrc"
+  "postCreateCommand": "echo '\n\nif [ -f \"$HOME/my_environment\" ]; then\n    source \"$HOME/my_environment\"\nfi\n\nsaveenv() {\n    # Check if var_save is set\n    declare -p | grep -v \"declare -[a-z]*r\" > \"$HOME/my_environment\"\n}\n\nclearenv() {\n    echo \"\" > \"$HOME/my_environment\"\n}' >> $HOME/.bashrc"
 }
